fixed position of complete button on smaller screes

--- a/style.css
+++ b/style.css
@@ -11,16 +11,23 @@ body{
     margin-top: 15px;
 }
 
-.test2{
-    position: relative;
-}
-
-
 #completed{
     position: absolute;
     left: 175px;
     margin: 15px;
     display: none;
+}
+
+@media (max-width: 1200px){
+        .test2 {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+        #completed{
+            position: relative;
+            left: 0;
+            margin: 10px auto;
+        }
 }
 
 .addItem{
